--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="subjects-section">
                 <div class="subject-row">
                     <div>
-                        <label>Subject Name:</label>
+                        <label>Subject:</label>
                         <input type="text" class="subject-name" placeholder="Enter subject name">
                     </div>
                     <div>
